# mini_tokamak_designer

./: .gitignore  README.md  environment-core.yml  environment-full.yml  environment.yml  pyproject.toml
configs/: design_space.car_sized.yaml  design_space.container_sized.yaml  design_space.van_sized.yaml  objectives.yaml  physics_limits.yaml
docs/: ROADMAP.md
install/: INSTALL_LOG.md  fuse_smoke.jl  install_fusion_tools.sh  install_julia_fuse.jl  verify_stack.py  windows_bootstrap.ps1  wsl_bootstrap.sh  wsl_optional_tools.sh
notebooks/: 01_design_space_exploration.ipynb  02_equilibrium_demo.ipynb  03_cad_demo.ipynb  04_optimization_demo.ipynb
scripts/: generate_cad.py  make_report.py  open_wsl_terminal.ps1  run_optuna_search.py  run_random_search.py  start_wsl_shell.sh
src/mini_tokamak/: __init__.py  cli.py  config.py  schemas.py  units.py
src/mini_tokamak/cad/: __init__.py  cadquery_adapter.py  cross_section.py  export_step.py  paramak_adapter.py
src/mini_tokamak/design/: __init__.py  candidate.py  constraints.py  design_space.py  dimensionless.py  scoring.py
src/mini_tokamak/ml/: __init__.py  dataset.py  models.py  train_surrogate.py  uncertainty.py
src/mini_tokamak_designer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cad_export.py  test_candidate_generation.py  test_cli_smoke.py  test_config.py  test_constraints.py  test_freegs_adapter.py  test_fuse_adapter.py  test_process_adapter.py  test_scoring.py  test_tokamaker_adapter.py  test_torax_adapter.py  test_torax_reporting.py
(+22 files in other folders)
