[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-tokamak-designer"
version = "0.1.0"
description = "CPU-first simulation and optimization framework for lower-size-limit tokamak feasibility studies."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "MiniTokamak Designer" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "xarray>=2024.1",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "rich>=13.7",
  "typer>=0.12",
  "duckdb>=1.0",
  "h5py>=3.10",
  "zarr>=2.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0", "mypy>=1.10"]
optimization = ["optuna>=3.6", "torch>=2.3", "botorch>=0.11", "jax[cpu]>=0.4.30"]
systems = ["openmdao>=3.30", "mlflow>=2.14"]
fusion = ["freegs", "torax", "openfusiontoolkit", "paramak"]

[project.scripts]
mini-tokamak = "mini_tokamak.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.black]
line-length = 100
